fix padding bug on mobile

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,8 +7,8 @@
 
 // for temp
 .current-main {
-  font-size: 2em;
-  padding: 12px 10px 10px 10px;
+  font-size: 30px;
+  padding: 10px 10px 10px 10px;
 }
 
 // for weather
@@ -31,6 +31,21 @@
 
 button:focus{
   outline:0;
+}
+
+// details formatting
+th, td {
+  padding: 5px 25px 5px 35px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.3);
+  font-size: 1.5em;
+  font-weight: bold;
+  max-width: 50%;
+}
+
+th {
+  padding:0 25px 0px 35px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 // for time
@@ -58,6 +73,7 @@ button:focus{
 .forecast-div {
   display: inline-block;
   padding-left: 40px;
+  width:100%;
 }
 
 // weekday header
